fix:adjust at home on mobile

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,6 +3,7 @@
   box-shadow: 0px 4px 16px rgba(1, 28, 64, 0.2);
   position: fixed;
   width: 100%;
+  z-index: 1;
 
   .header-container__row {
     height: 93px;
