--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 
   .home-content {
     max-width: 1440px;
@@ -73,6 +74,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+      img {
+        width: 100%;
+      }
     }
 
     @media (max-width: 1024px) {
